# GameOfLife

./: .gitignore  CMakeLists.txt  README.md
deploy/: legion.py  legion.sh.mko
src/: GameOfLife.cpp  GameOfLife.h  defs.h  main.cpp
tests/: CMakeLists.txt  tests.cpp
visualization/: visualize.py
